--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "repository": "github:mgcrea/node-xlsx",
   "license": "Apache-2.0",
   "dependencies": {
-    "xlsx": "^0.8.0"
+    "xlsx": "https://github.com/csotiriou/js-xlsx/"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
