--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "repository": "github:mgcrea/node-xlsx",
   "license": "Apache-2.0",
   "dependencies": {
-    "xlsx": "git+https://git@github.com/csotiriou/js-xlsx.git"
+    "xlsx": "csotiriou/js-xlsx"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
